# clion-printf

./: .gitignore  CMakeLists.txt  Makefile  a.out  add_x_num_utils.c  add_x_num_utils.h  ft_make_parse.c  ft_num_utils.c  ft_parse_utils.c  ft_parse_utils.h  ft_print_utils.c  ft_printf.c  ft_printf.h  ft_printf_utils 2.t  ft_printf_utils.c  get_width_precis.c  get_width_precis.h  num_utils.h  parse_nums_funcs.c  parse_nums_funcs.h  print_utils.h  print_width_precis.c  print_width_precis.h  test_main.c
